up to date, also fixed alignment

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -29,7 +29,7 @@ body {
   background-color: #F9F9F9;
   & > .content {
     &:before {
-      content: "Don't see your post? Send us a modmail!";
+      content: "Please keep all your fangirling/fanboying to the respective girl subreddits.";
       background-repeat: no-repeat;
       font-style: normal;
       font-weight: bold;
@@ -51,6 +51,16 @@ body {
     }
   }
 }
+#text-desc:after {
+    display: block;
+    margin-top: 1em;
+    font-weight: bold;
+    font-size: 150%;
+    color: green;
+/*  text-decoration: blink; */
+    content: "Question about where to start the manga after finishing the anime? Check the 'Resources and Links' panel in the navigation bar at the top!"
+}
+
 .side{
   font-size: 12px;
   background-color: #F9F9F9;
@@ -126,11 +136,11 @@ body {
         }
       }
     }
-    a[href="http://manga.redhawkscans.com/reader/read/nisekoi/en/0/160/page/1"] {
+    a[href="http://manga.redhawkscans.com/reader/read/nisekoi/en/0/161/page/1"] {
       display: block;
       height: 272px;
       width: 279px;
-      background: url(%%160%%) no-repeat scroll 0px 0px transparent;
+      background: url(%%161%%) no-repeat scroll 0px 0px transparent;
       color: transparent;
       overflow: hidden;
     }
@@ -207,6 +217,14 @@ body {
       }
       &:nth-of-type(3) {
         left: 537px;
+        a{
+          &:nth-of-type(1), &:nth-of-type(2), &:nth-of-type(4){
+            /*HACK TO FIX ALIGNMENT ISSUE*/
+            margin-left: 1px
+
+          }
+        }
+        
       }
       &:nth-of-type(4) {
         left: 788px;
@@ -1958,6 +1976,13 @@ a[href^="#thumbsup"]:hover {
       }
       &:nth-of-type(3) {
         left: 537px;
+        a{
+          &:nth-of-type(1), &:nth-of-type(2), &:nth-of-type(4){
+            /*HACK TO FIX ALIGNMENT ISSUE*/
+            margin-left: 1px
+
+          }
+        }
       }
       &:nth-of-type(4) {
         left: 788px;
